--- a/src/js/app/page/auth/login/login.component.html
+++ b/src/js/app/page/auth/login/login.component.html
@@ -11,10 +11,10 @@
                             <div class="col-md-6">
                                 <input [formControlName]="'username'" autofocus class="form-control" id="user_name"
                                        name="user_name"
-                                       required
+                                       required autocomplete="username"
                                        type="text">
                                 <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">
-                                   Please provide a valid username
+                                   Please provide a valid username autocomplete="username"
                                 </span>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                             <label class="col-md-4 col-form-label text-md-right" for="password">Password</label>
                             <div class="col-md-6">
                                 <input [formControlName]="'password'" class="form-control" id="password" name="password"
-                                       required
+                                       required autocomplete="current-password"
                                        type="password">
                                 <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
                                   Password cannot be empty
