--- a/src/js/app/page/auth/signup/signup.component.html
+++ b/src/js/app/page/auth/signup/signup.component.html
@@ -14,8 +14,10 @@
                                 Address</label>
                             <div class="col-md-6">
                                 <input [formControlName]="'email'" autofocus class="form-control" id="email_address"
-                                       name="email-address" required
-                                       type="text">
+                                       name="email-address" required  autocomplete="email"
+                                       type="text"
+
+                                >
 
                                 <span *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">
                                     Please provide a valid email
@@ -26,8 +28,11 @@
                         <div class="form-group row">
                             <label class="col-md-4 col-form-label text-md-right">User Name</label>
                             <div class="col-md-6">
-                                <input [formControlName]="'username'" autofocus class="form-control" required
-                                       type="text">
+                                <input [formControlName]="'username'" autofocus
+                                       class="form-control" required  autocomplete="username"
+                                       type="text"
+
+                                >
                                 <span *ngIf="!signUpForm.get('username').valid && signUpForm.get('username').touched">
                                     Please provide a valid username <br/>
                                     min 5 symbol
@@ -39,7 +44,7 @@
                             <label class="col-md-4 col-form-label text-md-right" for="password">Password</label>
                             <div class="col-md-6">
                                 <input [formControlName]="'password'" class="form-control" id="password" name="password"
-                                       required
+                                       required  autocomplete="new-password"
                                        type="password">
                                 <span *ngIf="!signUpForm.get('password').valid && signUpForm.get('password').touched">
                                     Please provide a valid Password <br/>
